refactored codebase into sorted folders for clarity

--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
         </div>
       </section>
     </div>
-    <script type="module" src="/src/renderer.ts"></script>
+    <script type="module" src="/src/renderer/index.ts"></script>
   </body>
 </html>
