--- a/index.html
+++ b/index.html
@@ -37,33 +37,95 @@
       </section>
 
       <section class="data-section">
-        <h2>Live Data</h2>
-        <div class="data-grid">
+        <h2>Live Data <span class="source-badge" id="source-type">--</span></h2>
+        <div class="data-grid data-grid-extended">
           <div class="data-card">
             <div class="data-label">Power</div>
             <div class="data-value">
-              <span id="power-value">--</span>
+              <span id="live-power">--</span>
               <span class="data-unit">W</span>
             </div>
           </div>
           <div class="data-card">
             <div class="data-label">Cadence</div>
             <div class="data-value">
-              <span id="cadence-value">--</span>
+              <span id="live-cadence">--</span>
               <span class="data-unit">RPM</span>
             </div>
           </div>
           <div class="data-card">
             <div class="data-label">Heart Rate</div>
             <div class="data-value">
-              <span id="hr-value">--</span>
+              <span id="live-hr">--</span>
               <span class="data-unit">BPM</span>
             </div>
           </div>
           <div class="data-card">
             <div class="data-label">Speed</div>
             <div class="data-value">
-              <span id="speed-value">--</span>
+              <span id="live-speed">--</span>
+              <span class="data-unit">km/h</span>
+            </div>
+          </div>
+          <div class="data-card">
+            <div class="data-label">Distance</div>
+            <div class="data-value">
+              <span id="live-distance">--</span>
+              <span class="data-unit">km</span>
+            </div>
+          </div>
+          <div class="data-card">
+            <div class="data-label">Calories</div>
+            <div class="data-value">
+              <span id="live-calories">--</span>
+              <span class="data-unit">kcal</span>
+            </div>
+          </div>
+          <div class="data-card">
+            <div class="data-label">Duration</div>
+            <div class="data-value">
+              <span id="live-duration">--</span>
+              <span class="data-unit"></span>
+            </div>
+          </div>
+          <div class="data-card">
+            <div class="data-label">Gear</div>
+            <div class="data-value">
+              <span id="live-gear">--</span>
+              <span class="data-unit"></span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="data-section ftms-section">
+        <h2>FTMS Output</h2>
+        <div class="data-grid">
+          <div class="data-card">
+            <div class="data-label">Power</div>
+            <div class="data-value">
+              <span id="ftms-power">--</span>
+              <span class="data-unit">W</span>
+            </div>
+          </div>
+          <div class="data-card">
+            <div class="data-label">Cadence</div>
+            <div class="data-value">
+              <span id="ftms-cadence">--</span>
+              <span class="data-unit">RPM</span>
+            </div>
+          </div>
+          <div class="data-card">
+            <div class="data-label">Heart Rate</div>
+            <div class="data-value">
+              <span id="ftms-hr">--</span>
+              <span class="data-unit">BPM</span>
+            </div>
+          </div>
+          <div class="data-card">
+            <div class="data-label">Speed</div>
+            <div class="data-value">
+              <span id="ftms-speed">--</span>
               <span class="data-unit">km/h</span>
             </div>
           </div>
