finally got all the py packages sorted out #1

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="controls">
           <button id="scan-btn" class="btn btn-primary">Scan for Devices</button>
           <button id="disconnect-btn" class="btn btn-secondary" disabled>Disconnect</button>
+          <button id="broadcast-btn" class="btn btn-broadcast">Start Broadcast</button>
         </div>
       </section>
 
