Changed the name of the app to FitBridge

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Trainerday Device Translator</title>
+    <title>FitBridge</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>Trainerday Device Translator</h1>
+        <h1>FitBridge</h1>
         <p class="subtitle">Connect fitness devices and broadcast as FTMS</p>
       </header>
 
