--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
       </section>
 
       <section class="log-section">
-        <h2>Activity Log</h2>
-        <div id="log" class="log-container">
+        <button id="log-toggle" class="log-toggle">
+          <span class="log-toggle-icon">&#9654;</span>
+          <h2>Activity Log</h2>
+        </button>
+        <div id="log" class="log-container collapsed">
           <div class="log-entry">Application started. Click "Scan for Devices" to begin.</div>
         </div>
       </section>
