implemented basic scanner and new scanning UI #4

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       </section>
 
       <section class="device-list-section" id="device-list-section" style="display: none;">
-        <h2>Found Devices</h2>
+        <div class="device-list-header" id="device-list-header">
+          <h2>Found Devices</h2>
+        </div>
         <div id="device-list" class="device-list">
           <!-- Devices will be populated here -->
         </div>
